--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,12 @@
 theme: jekyll-theme-cayman
+title: Jonny's Diary 
+author: plaguuuuu
+email: tranquilitatis@gmail.com
+description: > # this means to ignore newlines until "baseurl:"
+  A blog designed to document my own coding adventures. This is primarily a way for me showcase what I've done and the methods 
+  I used to get there. Mostly a fun way to record all the stuff that I've done!
+# social links
+twitter_username: None yet! # DO NOT include the @ character, or else the build will fail!
+github_username:  Pinnacle55 # DO NOT include the @ character, or else the build will fail!
+
+show_excerpts: true # set to false to remove excerpts on the homepage
