--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: Jonny's Diary 
+title: Jonny's Coding Notebook 
 author: plaguuuuu
 email: tranquilitatis@gmail.com
 theme: jekyll-theme-cayman
 description: > # this means to ignore newlines until "baseurl:"
   A blog designed to document my own coding adventures. This is primarily a way for me showcase what I've done and the methods 
-  I used to get there. Mostly a fun way to record all the stuff that I've done!
+  I used to get there. Currently just for fun, but this may change down the road!
 # social links
 twitter_username: None yet! # DO NOT include the @ character, or else the build will fail!
 github_username:  Pinnacle55 # DO NOT include the @ character, or else the build will fail!
